Added a classes model and fixed styling issues Added a postgresDB connection pool with a classes model. Fixed some formatting errors with ui

--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -2,5 +2,15 @@
 
 {{define "main"}}
     <h2>Class List</h2>
+    <table>
+        <tr>
+            <th>Class Name</th>
+            <th>Expires</th>
+        </tr>
+        <tr>
+            <td>name</td>
+            <td>date</td>
+        </tr>
+    </table>
     <p>There's nothing to see here... yet!</p>
 {{end}}
