Added some css, js, and html to the ui Also renamed a column name from id to classid to differenciate between userid and classid.

--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-        <h1><a href="/">HOME</a></h1>
+        <h1>UCSC Class Notifier</h1>
+        <hr class="line"></hr>
     </header>
     {{template "nav" .}}
     <main>
