--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -1,16 +1,24 @@
-{{define "title"}}HOME{{end}}
+{{define "title"}}Home{{end}}
 
 {{define "main"}}
     <h2>Class List</h2>
-    <table>
+    <div class="dropdown">
+        <button onclick="showClasses()" class="dropbtn">Search</button>
+        <button class="add-button">Add</button>
+        <div id="searchDropdown" class="dropdown-content">
+            <input type="text" placeholder="Search..." id="searchInput" onkeyup="filterFunction()">
+            <a href="#test1">Test1</a>
+            <a href="#test2">Test2</a>
+            <a href="#test3">Test3</a>
+        </div>
+    </div>
+    <table class="class-table">
+        <!-- range -->
         <tr>
-            <th>Class Name</th>
-            <th>Expires</th>
+            <td>Class link</td>
+            <td><button>Delete</button></td>
         </tr>
-        <tr>
-            <td>name</td>
-            <td>date</td>
-        </tr>
+        <!-- end -->
     </table>
-    <p>There's nothing to see here... yet!</p>
+    <!-- <p>There's nothing to see here... yet!</p> -->
 {{end}}
