Added a cache to templates Added a cache to templates and some dynamic rendering for our templates. Also added some dependency injection so that the dynamic rendering can be a bit more scalable as we code the website.

--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -6,9 +6,9 @@
         <form class="search-bar">
             <input list="classList" id="classSearch" name="classSeatch" placeholder="Search...">
             <datalist id="classList">
-                <option value="Test1">
-                <option value="Test2">
-                <option value="Test3">
+                {{range .Classes}}
+                    <option value="{{.Name}}">
+                {{end}}
             </datalist>
         </form>
         <button>Add</button>  
