Added notification list to home page Added notification list to home page for user and changed the notification struct for storing the data to pass to the template.

--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -14,9 +14,11 @@
         <button>Add</button>  
     </div>
     <table class="class-table">
+        {{range .Notifications}}
         <tr>
-            <td>Class link</td>
+            <td><a href="{{.Link}}">{{.Name}}</a></td>
             <td><button>Delete</button></td>
         </tr>
+        {{end}}
     </table>
 {{end}}
