Added functionality to delete notifications from home page. Changed the requests to be POST requests when deleting due to html forms not being able to process delete requests. This is most likely temporary and will be changed.

--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -16,7 +16,11 @@
         {{range .Notifications}}
         <tr>
             <td><a href="{{.Link}}">{{.Name}}</a></td>
-            <td><button>Delete</button></td>
+            <td>
+                <form action="/notification/delete/{{.NotificationID}}" method="POST">
+                    <button type="submit">Delete</button>
+                </form>
+            </td>
         </tr>
         {{end}}
     </table>
