--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -15,6 +15,9 @@
     </header>
     {{template "nav" .}}
     <main>
+        {{with .Flash}}
+            <div class="flash">{{.}}</div>
+        {{end}}
         {{template "main" .}}
     </main>
     <footer>Created by <a href="https://instagram.com/hunttraitor">HuntTraitor</a></footer>
