Added signup functionality using bcrypt for passwords Added a signup post form that adds a user to the users table in the database using bcrypt

--- a/ui/html/pages/signup.html
+++ b/ui/html/pages/signup.html
@@ -27,7 +27,7 @@
         {{with .Form.FieldErrors.confirmedpassword}}
             <label class="error">{{.}}</label>
         {{end}}
-        <input type="confirmedpassword" name="confirmedpassword">
+        <input type="password" name="confirmedpassword">
     </div>
     <div>
         <input type="submit" value="Signup">
