Added HTMX to handle delete request within html Also added a redirect helper that sets the header of the request as a client side redirect for HTMX

--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -19,10 +19,7 @@
         <tr>
             <td><a href="{{.Link}}">{{.Name}}</a></td>
             <td>
-                <form action="/notification/delete/{{.NotificationID}}" method="POST">
-                    <input type="hidden" name="csrf_token" value="{{$.CSRFToken}}">
-                    <button type="submit">Delete</button>
-                </form>
+                <button hx-delete="/notification/delete/{{.NotificationID}}" hx-trigger="click" hx-headers='{"X-CSRF-Token": "{{$.CSRFToken}}"}'>Delete</button>
             </td>
         </tr>
         {{end}}
