--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -21,7 +21,8 @@
         {{template "main" .}}
     </main>
     <footer>Created by <a href="https://instagram.com/hunttraitor">HuntTraitor</a></footer>
-    <script src="/static/js/script.js" type="text/javascript"></script>  
+    <script src="/static/js/script.js" type="text/javascript"></script>
+    <script src="/static/js/htmx.min.js" type="text/javascript"></script>
 </body>
 </html>
 {{end}}
