Added tests for home page Added two tests for authenticated access and unauthenticated access

--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -15,6 +15,7 @@
 </div>
 <table class="class-table">
     {{if .IsAuthenticated}}
+    <h1 class="notification-title">Notification List</h1>
         {{range .Notifications}}
         <tr>
             <td><a href="{{.Link}}">{{.Name}}</a></td>
